# hqt-enterprise-mvp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
app/: __init__.py  db.py  main.py  models.py  schemas.py
app/api/: routes.py
app/core/: config.py
app/services/: auth.py  llm_client.py  matching.py  policy_kb.py  policy_seed.py  policy_structurer.py  qa.py
app/static/: index.html  login.html  login.js  styles.css  workspace.html  workspace.js
app/static/react/: index.html
app/static/react/assets/: index-Du9B_tGd.js  index-XSjdEaRB.css
docs/: 00-project-charter.md  01-prd-enterprise-mvp.md  02-user-flow-and-ia.md  03-data-dictionary.md  04-policy-rule-spec.md  05-api-contract-v1.md  06-ai-qa-guardrails.md  07-workorder-sop.md  08-release-checklist.md  09-changelog.md
frontend/: README.md  index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/pages/: Login.tsx  Workspace.tsx
frontend/src/pages/views/: Assistant.tsx  Match.tsx  Overview.tsx  Profile.tsx  Ticket.tsx
frontend/src/services/: api.ts
hqt_enterprise_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api.py
